--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "dependencies": {
     "@craco/craco": "^7.0.0-alpha.3",
     "@loadable/component": "^5.15.2",
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.3.5"
   },
   "scripts": {
