--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "redux-logger": "^3.0.6",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "tailwind-styled-components": "^2.2.0"
   },
   "scripts": {
     "start": "craco start",
