--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@craco/craco": "^7.0.0-alpha.3",
     "@loadable/component": "^5.15.2",
     "@reduxjs/toolkit": "^1.8.5",
+    "antd": "^4.23.2",
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
