--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "react-uuid": "^1.0.3",
     "redux-logger": "^3.0.6",
     "styled-components": "^5.3.5"
   },
